--- a/newsv2/css/news.css
+++ b/newsv2/css/news.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+
+
+
+
 .news-block{
    width:940px;
    margin:auto auto 25px auto;
@@ -80,13 +84,615 @@
    
    
    
+ 
+  
+.box-content {
+  position: relative;
+  max-width: 1010px;
+  margin-left: auto;
+  margin-right: auto;
+ padding: 1% 2%  1% 2%;
+  z-index: 3; }
+  
+  .box-content2 {
+  position: relative;
+  max-width: 1010px;
+  margin-left: auto;
+  margin-right: auto;
+ padding: -3% 1%  -3% 1%;
+  z-index: 3; }
+  
+  .newsBox {
+  background-color: rgba(29, 29, 29, 0.8);
+  max-width: 315px;
+  border-radius: 2%;
+  box-shadow: 3px 3px 0px #ffe000;
+  box-sizing: border-box;
+  width: 31.2%;
+  margin-right: 3.2%;
+  margin-bottom: 30px;
+  -webkit-transition-property: box-shadow transform;
+  transition-property: box-shadow transform;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  -webkit-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+          transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); }
+
+  .newsBox:nth-child(3n) {
+    margin-right: 0; }
+  .newsBox:hover {
+    -webkit-transform: translate3d(-3px, -3px, 0);
+            transform: translate3d(-3px, -3px, 0);
+    box-shadow: 6px 6px 0px #ffe000; 
+	}
+  @media only screen and (max-width: 680px) {
+    .newsBox {
+      max-width: 100%;
+      width: 100%; } }
+  @media only screen and (max-width: 680px) {
+    .newsBox {
+      margin-bottom: 10px;
+      max-width: 100%;
+      width: 100%; } }
+	 
+  .newsBox a {
+    display: block;
+    padding: 9.4%; }
+    @media only screen and (max-width: 680px) {
+      .newsBox a {
+        padding: 3.2%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
+        background-image: url(../images/common/bg-arrow-news.png);
+        background-size: 17px;
+        background-position: right center;
+        background-repeat: no-repeat; } }
+  .newsBox.top {
+    width: 45%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    margin-bottom: 40px; }
+    .newsBox.top:nth-child(3n) {
+      margin-right: 5%; }
+    @media only screen and (max-width: 979px) {
+      .newsBox.top {
+        margin-bottom: 30px; } }
+    @media only screen and (max-width: 680px) {
+      .newsBox.top {
+        margin-bottom: 7px;
+        width: 100%; } }
+  .newsBox .img {
+    border-radius: 2%;
+    padding-top: 80%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 5%; }
+    @media only screen and (max-width: 680px) {
+      .newsBox .img {
+        margin-bottom: 0;
+        width: 44%;
+        padding-top: 35%; } }
+    .newsBox .img img {
+      width: 100%;
+      height: auto; }
+  .newsBox dl {
+	  margin-bottom: 0px;
+    padding-bottom: 0em;
+    position: relative; }
+
+    @media only screen and (max-width: 680px) {
+      .newsBox dl {
+        width: 46%;
+        margin-left: 3%; } }
+    .newsBox dl dt {
+	font-family: 'Roboto', sans-serif;
+      color: #409f00;
+      position: absolute;
+      top: 50px;
+      left: 170px;
+	  bottom: 0px;
+	  right: 0px;
+      font-size: 47px;
+      font-weight: bold;
+      text-shadow: 1px 1px 0 #fff;
+	   font-size: 3.2rem;
+      line-height: 1.16667;
+      letter-spacing: 0.025em;
+      z-index: 5; }
+      @media only screen and (max-width: 680px) {
+        .newsBox dl dt {
+          font-size: 12px;
+          font-size: 2.3rem;
+		top: 90px;
+      left: 130px;		  } }
+	  
+	   .newsBox dl dm {
+	font-family: 'Roboto', sans-serif;
+      color: #ffe000;
+      position: absolute;
+      top: 70px;
+      left: 200px;
+	  bottom: 0px;
+	  right: 0px;
+      font-size: 47px;
+      font-weight: bold;
+      text-shadow: 1px 1px 0 #fff;
+	   font-size: 3.2rem;
+      line-height: 1.16667;
+      letter-spacing: 0.025em;
+      z-index: 5; }
+      @media only screen and (max-width: 680px) {
+        .newsBox dl dm {
+          font-size: 12px;
+          font-size: 2.3rem;
+		top: 105px;
+      left: 150px;		  } }
+    .newsBox dl dd {
+      font-size: 10px;
+      font-size: 1.4rem;
+      line-height: 1.28571;
+      letter-spacing: 0.025em;
+      color: #fff; }
+	  .newsBox icon_list {
+      position: relative;
+      z-index: 5;
+      margin: 0 0 5px 0;
+      padding: 0 0 0 20px;
+      text-align: left; }
+  
+   .newsBox icon_list {
+	   margin-top: 10px;
+        display: inline-block;
+        background: #409f00;
+        color: #fff;
+        border-radius: 0 30px 0 0; }
+        .newsBox icon_list {
+          font-size: 11px;
+          font-weight: bold;
+          padding: 2px 21px 0 9px;
+          letter-spacing: 1.1px;
+          line-height: 1.6em;
+          vertical-align: middle; }
+  
+  	
+  
+  .newsBox-detail {
+  border: 1px solid #ffe000;
+  border-radius: 10px;
+  box-shadow: 7px 7px 0px #ffe000;
+  position: relative;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  overflow: hidden; }
+  @media only screen and (max-width: 680px) {
+    .newsBox-detail {
+      box-shadow: 3px 3px 0px #ffe000;
+	   position: relative;
+  width: 100%;
+  margin: 65px auto 0; }} }
+
+			  
+			  
+			  
+  
+	
+		 
+  .newsBox-detail .txtBody {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 2% 9.5%  2% 2%;
+    font-size: 18px;
+    font-size: 1.8rem;
+    line-height: 1.77778;
+    letter-spacing: 0.025em; }
+    @media only screen and (max-width: 680px) {
+      .newsBox-detail .txtBody {
+        font-size: 18px;
+        font-size: 1.3rem; } }
+    .newsBox-detail .txtBody a {
+      color: #D7477F; }
+      .newsBox-detail .txtBody a:hover {
+        text-decoration: underline; }
+    @media only screen and (max-width: 680px) {
+      .newsBox-detail .txtBody {
+        padding: 4% 4%  6% 4%; } }
+    .newsBox-detail .txtBody img {
+      max-width: 100%;
+      height: auto !important; }
+    .newsBox-detail .txtBody.type-story img {
+      max-width: 49%;
+      margin-right: 1%;
+      margin-bottom: 1%;
+      height: auto !important; }
+      .newsBox-detail .txtBody.type-story img:nth-child(2n) {
+        margin-right: 0; }
+      @media only screen and (max-width: 680px) {
+        .newsBox-detail .txtBody.type-story img {
+          margin-right: 0;
+          margin-bottom: 2%;
+          max-width: 100%; } }
+  .newsBox-detail iframe {
+    max-width: 100%;
+    max-height: 448px; }
+    @media only screen and (max-width: 979px) {
+      .newsBox-detail iframe {
+        max-height: 400px; } }
+    @media only screen and (max-width: 680px) {
+      .newsBox-detail iframe {
+        max-height: 180px; } }
+		
+		.paging {
+  font-size: 0;
+  text-align: center;
+  margin-top: 50px; }
+  @media only screen and (max-width: 680px) {
+    .paging {
+      margin-top: 30px; } }
+  .paging li {
+    font-size: 21px;
+    font-size: 2.1rem;
+    line-height: 1.42857;
+    font-weight: bold;
+    display: inline-block;
+    border: 4px solid #ffe000;
+    border-radius: 50%;
+    width: 38px;
+    height: 38px;
+    text-align: center;
+    margin-left: 5px;
+    margin-right: 5px;
+    -webkit-transition-property: background-color;
+    transition-property: background-color;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-delay: 0s;
+            transition-delay: 0s;
+    -webkit-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+            transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); }
+    .paging li a {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+      color: #e65582; }
+    .paging li.ico-prev a {
+      background-repeat: no-repeat;
+      background-position: 3px center;
+      background-image: url(../images/common/ico-prev.png); }
+    .paging li.ico-next a {
+      background-repeat: no-repeat;
+      background-position: 5px center;
+      background-image: url(../images/common/ico-next.png); }
+    .paging li.current {
+      border: 4px solid #ffe000;
+      background-color: #5ab71b;
+      color: #fff; }
+      .paging li.current:hover {
+        background-color: #2b6b00; }
+    .paging li:hover {
+      background-color: #2b6b00; }
    
    
    
    
    
-   
-   
-   
-   
-   
+.box-ttl {
+  height: 320px;
+  position: relative;
+  z-index: 1;
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto; }
+  .box-ttl:before {
+    content: '';
+    position: absolute;
+    z-index: 0;
+    width: 402px;
+    height: 402px;
+    background-image: url(../images/common/ico-skeleton.png);
+    background-size: 100%;
+    right: -100px;
+    top: -30px; }
+  @media only screen and (max-width: 979px) {
+    .box-ttl {
+      height: 225px;
+      margin-bottom: 15px; }
+      .box-ttl:before {
+        content: '';
+        position: absolute;
+        z-index: 0;
+        width: 276px;
+        height: 276px;
+        background-image: url(../images/common/ico-skeleton.png);
+        background-size: 100%;
+        right: -37px;
+        top: -27px; } }
+  @media only screen and (max-width: 680px) {
+    .box-ttl {
+      height: 130px;
+      margin-bottom: 15px; }
+      .box-ttl:before {
+        content: '';
+        position: absolute;
+        z-index: 0;
+        width: 151px;
+        height: 151px;
+        background-image: url(../images/common/ico-skeleton.png);
+        background-size: 100%;
+        right: -37px;
+        top: -27px; } }
+  .box-ttl .ttl-sub {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translate3d(0, -50%, 0);
+            transform: translate3d(0, -50%, 0); }
+    @media only screen and (max-width: 680px) {
+      .box-ttl .ttl-sub {
+        -webkit-transform: translate3d(5px, -50%, 0);
+                transform: translate3d(5px, -50%, 0); } }
+.newsTxtarea {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  @media only screen and (max-width: 680px) {
+    .newsTxtarea {
+      display: block;
+      margin-bottom: 15px; } }
+	  
+	  
+	  
+	  
+	
+
+.news_detail {
+background-color: rgba(29, 29, 29, 0.8);
+  border-radius: 2%;
+  box-shadow: 3px 3px 0px #ffe000;
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  margin: 65px auto 0; }
+  .news_detail .news_detail_inner {
+    position: relative;
+    text-align: left;
+    padding: 0 0 35px 0;
+    margin: 0 auto 30px; }
+    .news_detail .news_detail_inner:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 7px;
+      background: url(../img/in/news/line_dot.png) top center; }
+    .news_detail .news_detail_inner .detail_left {
+      position: relative;
+      display: inline-block;
+      vertical-align: top;
+      margin: 0 45px 0 0; }
+      .news_detail .news_detail_inner .detail_left .days_inner {
+        font-family: 'Roboto', sans-serif;
+        position: relative;
+        width: 140px;
+        height: 165px; }
+        .month {
+          color: #409f00;
+          position: absolute;
+          top: 10px;
+          left: 90px;
+          font-size: 40px;
+          font-weight: bold;
+		  text-shadow: 2px 2px 0 #fff;
+          z-index: 5; }
+        .date {
+          color: #ffe000;
+          position: absolute;
+          top: 30px;
+          left: 105px;
+          font-size: 70px;
+          font-weight: bold;
+		  text-shadow: 2px 2px 0 #fff;
+          z-index: 5; }
+		  
+		  	 @media only screen and (max-width: 680px) {
+	.month {
+          color: #84c540;
+          position: absolute;
+          top: -50px;
+          left: 280px;
+          font-size: 30px;
+          font-weight: bold;
+	 z-index: 5; }}
+	 
+	         
+	 
+	  @media only screen and (max-width: 680px) {
+      .date {
+          color: #ffd74c;
+          position: absolute;
+          top: -30px;
+          left: 306px;
+          font-size: 40px;
+          font-weight: bold;
+	  z-index: 5; }}
+      .news_detail .news_detail_inner .detail_left .news_share {
+        position: relative;
+        width: 140px;
+        height: 72px;
+        background: url(../img/in/news/bg_share.png) top center no-repeat; }
+        .news_shhare_list {
+          position: absolute;
+          top: 140px;
+          left: 110px;
+          text-align: center; }
+		   @media only screen and (max-width: 680px) {
+		.news_shhare_list {
+          position: absolute;
+          top: -35px;
+          left: 0px;
+          text-align: center; }
+		   }
+          .news_detail .news_detail_inner .detail_left .news_share .news_shhare_list li {
+            display: inline-block;
+            width: 40px; }
+            .news_detail .news_detail_inner .detail_left .news_share .news_shhare_list li a img {
+              -webkit-transition: opacity .5s ease-in-out 0s;
+              transition: opacity .5s ease-in-out 0s; }
+            .news_detail .news_detail_inner .detail_left .news_share .news_shhare_list li a:hover img {
+              opacity: 0.5;
+              filter: alpha(opacity=50); }
+    .news_detail .news_detail_inner .detail_right {
+      position: relative;
+      display: inline-block;
+      width: 770px;
+      text-align: left;
+ margin: 0 45px 0 0;	  }
+  @media only screen and (max-width: 680px) {
+			    .news_detail .news_detail_inner .detail_right {
+      position: relative;
+      display: inline-block;
+      width: 770px;
+      text-align: left;
+ margin: 0 45px 0 0;
+display: none; }
+		   }
+      .news_detail .news_detail_inner .detail_right img, .news_detail .news_detail_inner .detail_right iframe, .news_detail .news_detail_inner .detail_right video, .news_detail .news_detail_inner .detail_right object {
+        max-width: 100%; }
+      #icon_list {
+      position: relative;
+      z-index: 5;
+      padding: 0 0 0 10px;
+      text-align: left; 
+	   margin-top: 110px;
+	   margin-left: 50px;
+        display: inline-block;
+        background: #409f00;
+        color: #fff;
+        border-radius: 0 30px 0 0; 
+          font-size: 11px;
+          font-weight: bold;
+          padding: 5px 20px 5px 15px;
+          letter-spacing: 1.1px;
+          line-height: 1em;
+          vertical-align: middle; }
+		    @media only screen and (max-width: 680px) {
+       #icon_list {
+      position: relative;
+      z-index: 5;
+      padding: 0 0 0 110px;
+      text-align: left; 
+	   margin-top: -15px;
+	   margin-left: -10px;
+        display: inline-block;
+        background: #409f00;
+        color: #fff;
+        border-radius: 0 30px 0 0; 
+          font-size: 11px;
+          font-weight: bold;
+          padding: 5px 10px 5px 10px;
+          letter-spacing: 1.1px;
+          line-height: 1em;
+          vertical-align: middle; }}
+      .news_detail .news_detail_inner .detail_right h2 {
+        position: relative;
+        font-size: 27px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        padding: 0 0 35px 0;
+        margin: 0 0 29px 0;
+        line-height: 1.3; }
+        .news_detail .news_detail_inner .detail_right h2:after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 15px;
+          background: url(../img/in/news/line_wave_detailtitle.png) top center no-repeat; }
+      .news_detail .news_detail_inner .detail_right .news_txt_out {
+        font-size: 16px;
+        line-height: 1.6em; 
+		margin-top: 0px;
+		background-color: red;}
+        .news_detail .news_detail_inner .detail_right .news_txt_out p {
+          margin: 0 0 30px 0; }
+        .news_detail .news_detail_inner .detail_right .news_txt_out a {
+          color: #eb549c;
+          opacity: 1;
+          filter: alpha(opacity=100);
+          -webkit-transition: 0.5s;
+          transition: 0.5s; }
+  .news_detail .detail_pager {
+    position: relative;
+    margin: 0 auto 90px;
+    display: flex;
+    justify-content: space-between; }
+    .news_detail .detail_pager li {
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      font-weight: 500;
+      width: 310px; }
+      .news_detail .detail_pager li a {
+        display: block;
+        color: #5e0000;
+        text-decoration: none; }
+        .news_detail .detail_pager li a p {
+          display: inline-block;
+          vertical-align: middle;
+          margin: 0 13px; }
+      .news_detail .detail_pager li:hover .cap_prev {
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -o-transition: 0.5s;
+        -ms-transition: 0.5s;
+        transition: 0.5s;
+        opacity: .7; }
+      .news_detail .detail_pager li:hover .cap_next {
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -o-transition: 0.5s;
+        -ms-transition: 0.5s;
+        transition: 0.5s;
+        opacity: .7; }
+    .news_detail .detail_pager .btn_news_list {
+      width: 265px; }
+    .news_detail .detail_pager .prev_txt .icon_prev {
+      width: 44px;
+      margin: 0 0 5px 0; }
+    .news_detail .detail_pager .prev_txt .cap_prev {
+      width: 220px;
+      -webkit-text-align:justify;
+      text-align:justify;
+      text-justify : inter-ideograph ;
+      line-height: 1.5em;
+      -webkit-transition: 0.5s;
+      -moz-transition: 0.5s;
+      -o-transition: 0.5s;
+      -ms-transition: 0.5s;
+      transition: 0.5s; }
+    .news_detail .detail_pager .next_txt .icon_next {
+      width: 44px;
+      margin: 0 0 5px auto; }
+    .news_detail .detail_pager .next_txt .cap_next {
+      width: 220px;
+      line-height: 1.5em;
+      -webkit-text-align:justify;
+      text-align:justify;
+      text-justify : inter-ideograph ;
+      -webkit-transition: 0.5s;
+      -moz-transition: 0.5s;
+      -o-transition: 0.5s;
+      -ms-transition: 0.5s;
+      transition: 0.5s; }
