--- a/newsv2/css/idx.css
+++ b/newsv2/css/idx.css
@@ -96,10 +96,26 @@ a:hover{
 
 }
  
+.col-lg-8 {
+	background-color: rgba(29, 29, 29, 0.8);
+  border-radius: 2%;
+  box-shadow: 3px 3px 0px #ffe000;
+  box-sizing: border-box;
+  margin-bottom: 30px;
+  -webkit-transition-property: box-shadow transform;
+  transition-property: box-shadow transform;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+  -webkit-transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+          transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); }
 
-
-
-
+@media only screen and (max-width: 680px) {
+.col-lg-8 img{
+      max-width: 100%;
+      height: auto !important; }
+}
 
 /* --- ヘッダー非表示 ------------------------------ */
 #sp-header{
