--- a/newsv2/css/idx.css
+++ b/newsv2/css/idx.css
@@ -6,11 +6,10 @@
 html, body{
    margin:0;
    padding:0;
-   font-family: "游ゴシック", "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ ゴシック", sans-serif!important;
-   background-image:  url(../img/black-wallpaper-8.jpg);
-   color:#D3D3D3!important;
+   background-image:  url(../img/bg_putih.png);
+   color:#409f00!important;
    background-position: center;
-	background-attachment: fixed;
+
    background-repeat: repeat;
 
 
@@ -19,13 +18,6 @@ html, body{
 
 
 
-a,
-a:visited{
-   color:#fff!important;
-   text-decoration:underline!important;}
-
-a:hover{
-   text-decoration:none!important;}
 
 
 /* --- 左サイド ------------------------------ */
@@ -69,7 +61,35 @@ a:hover{
 #left-menu-nav li:hover{
    background-image: url(../img/bt_slice.png); position: right}
 
-
+.navList li {
+	margin: 10px 30px;
+}
+.navList a {
+	position: relative;
+	display: block;
+	font-family: 'Junge', serif;
+	font-size: 150%;
+	color: black;
+	text-indent: 10px;
+	letter-spacing: 2px;
+}
+.navList a:before {
+	content: attr(data-hover);
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	color: #ffe000;
+	background-color: #63b12f;
+	width: 0%;
+	word-break: normal;
+	-webkit-transition: width .4s ease-out;
+	-moz-transition: width .4s ease-out;
+	transition: width .4s ease-out;
+}
+.navList a:hover:before {
+	width: 100%;
+}
 
 
 /* --- ビジュアル ------------------------------ */
